# SlideAgent

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  DirectoryClient.py  README.md  ROADMAP.md  create_charts.py  package.json  pyproject.toml  requirements.txt  roadmap-mobile.md  slideagent.py  test_comprehensive.py  test_refactored.py
markdown_templates/: memory_template.md  outline_template.md
projects/: ABOUT.md
slideagent_mcp/: __init__.py  live_viewer_server.js  pdf_generator.js  server.py
slideagent_mcp/resources/markdown_templates/: agents.yaml
slideagent_mcp/resources/outline_templates/: report_outline.md  slide_outline.md
slideagent_mcp/resources/prompts/: outline.md  system.md
slideagent_mcp/utils/: live_viewer_server.js  pdf_generator.js  plot_buddy.py
slideagent_mcp/utils/live_viewer/: live_viewer_server.js
src/charts/chart_templates/: bar_chart.py  line_chart.py  pie_chart.py  stacked_bar.py
src/charts/utils/: plot_buddy.py
src/slides/: pdf_generator.js  viewer_template.html
src/slides/core_css/: base.css  print.css
src/slides/slide_templates/: 00_title_slide.html  01_base_slide.html  02_text_left_image_right.html  03_two_column_slide.html  04_full_image_slide.html  05_quote_slide.html  08_grid_matrix.html  (+52 more)
src/utils/: live_viewer_server.js  pdf_generator.js  puppeteer_helper.js  screenshotter.js
tests/: README.md  run_all_tests.py  test_constants.py  test_css_paths.py  test_live_viewer.py  test_mcp_tools.py  test_plotbuddy.py  test_project_structure.py  test_template_discovery.py  test_theme_management.py
themes/private/: ABOUT.md
(+29 files in other folders)
